2007-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* util/cache.c (cache_new): Change max_size and node_size to be of
	type size_t.

	* gmime/gmime-multipart-encrypted.c
	(g_mime_multipart_encrypted_new): g_object_new() doesn't need a
	second NULL argument.

	* gmime/gmime-utils.c (decode_8bit): Close the iconv descriptor
	and since we are using is_ascii() now, we don't need to use
	unsigned char *'s.

2007-04-12  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (decode_8bit): Use is_ascii().
	(g_mime_utils_header_decode_text): Same.
	(g_mime_utils_header_decode_phrase): Here too.

	* gmime/gen-table.c: Added a is_ascii() macro for use instead of
	the ctype isascii() so that I don't have to worry about casting.

2007-04-11  Jeffrey Stedfast  <fejj@gnome.org>

	Revision 1119 (previous commit) made the following 2 functions
	even less attractive than they already were, so I decided to
	rewrite them especially since it wasn't hard to find a far cleaner
	approach.

	* gmime/gmime-utils.c (g_mime_utils_header_decode_text): Rewritten
	to be cleaner, faster, and more elegant.
	(g_mime_utils_header_decode_phrase): Same.

2007-04-11  Jeffrey Stedfast  <fejj@gnome.org>

	Fixes for bug #423760 and bug #342196

	* gmime/gmime-charset.c (g_mime_charset_can_encode): New
	convenience function to check whether a length of UTF-8 text can
	be converted into the specified charset.
	(g_mime_set_user_charsets): New function allowing an application
	to provide GMime with a list of user-preferred charsets to use for
	encoding and decoding headers.
	(g_mime_user_charsets): New function to get the list of
	user-preferred charsets.

	* gmime/gmime-utils.c (decode_8bit): New function to convert
	arbitrary 8bit text into UTF-8 using the charset list provided by
	g_mime_user_charsets().
	(rfc2047_decode_word): Don't assume that just because the declared
	charset is UTF-8 that it actually is in UTF-8.
	(rfc2047_decode_word): If we can't open a converter for the